--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
     <main>
 
         <div class="bg_regex">
-            <h2>Regex if Test</h2>
-            <input id="input_regex" type="text" value="sdfa" placeholder="Regex" />
+            <h2>Regex with Test</h2>
+            <input id="input_regex" type="text" value="" placeholder="Regex" />
             <button id="btn_test">Execute</button>
 
-            <p>Test</p>
-            <p>Test() executes a search throw a string and return true if find it</p>
+            <p><br>
+                Test() executes a search throw a string and return true if find it or false if don't
+            </p>
             <div class="res" id="res_test"></div>
-        </div>
+        
+        
+            </div><!--bg_regex-->
 
         <div id="text">
 
