btn removed checkbox sensitive add

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="bg_regex">
             <h2>Regex with Test</h2>
             <input id="input_regex" type="text" value="" placeholder="Regex" />
-            <button id="btn_test">Execute</button>
+            <label><input type="checkbox" id="case_sensitive" />Case Sensitive</label>
 
             <p><br>
                 Test() executes a search throw a string and return true if find it or false if don't
