function toogle checkbox true and false add

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div class="bg_regex">
             <h2>Regex with Test</h2>
             <input id="input_regex" type="text" value="" placeholder="Regex" />
-            <label><input type="checkbox" id="case_sensitive" />Case Sensitive</label>
+            <label><input type="checkbox" id="case_sensitive" checked="checked" />Case Sensitive</label>
 
             <p><br>
                 Test() executes a search throw a string and return true if find it or false if don't
             </p>
+
             <div class="res" id="res_test"></div>
-        
-        
+
             </div><!--bg_regex-->
 
         <div id="text">
