starts the method get flags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          
         </style>
         <div class="bg_regex">
-            <h2>Regex with Test</h2>
+            <h2>Regex Tester</h2>
             <input id="input_regex" type="text" value="" placeholder="Regex" />
         <div id="flags"><span>Flags</span>
                         <ul>
@@ -33,7 +33,6 @@
 
         <p>
             <br> 
-            Test() executes a search throw a string and return true if find it or false if don't
         </p>
 
             <div class="res" id="res_test"></div>
