--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <input id="input_regex" type="text" value="" placeholder="Regex" />
         <div id="flags"><span>Flags</span>
                         <ul>
-                            <li><label><input type="checkbox" /> Global </label></li>
-                            <li><label><input type="checkbox" /> Multline </label></li>
-                            <li><label><input type="checkbox" /> Insensitive </label></li>
-                            <li><label><input type="checkbox" /> Dotall </label></li>
-                            <li><label><input type="checkbox" /> Enables </label></li>
-                            <li><label><input type="checkbox" /> Sticky </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags" name="global" onclick="checkboxFlags(this)"/> Global </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags"  onclick="checkboxFlags(this)"/> Multline </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags"  onclick="checkboxFlags(this)"/> Insensitive </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags"  onclick="checkboxFlags(this)"/> Dotall </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags"  onclick="checkboxFlags(this)"/> Enables </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags"  onclick="checkboxFlags(this)"/> Sticky </label></li>
 
                         </ul>
 
