--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 
          
         </style>
-        <div class="bg_regex">
+        <div class="bg_regex" id="regex_box">
             <h2>Regex Tester</h2>
             <input id="input_regex" type="text" value="" placeholder="Regex" />
         <div id="flags"><span>Flags</span>
                         <ul>
-                            <li><label><input type="checkbox" class="checkbox_flags" name="g" data-checked="unchecked" onclick="checkboxFlags(this)"/> Global </label></li>
-                            <li><label><input type="checkbox" class="checkbox_flags" name="m" data-checked="unchecked" onclick="checkboxFlags(this)"/> Multline </label></li>
-                            <li><label><input type="checkbox" class="checkbox_flags" name="i" data-checked="unchecked" onclick="checkboxFlags(this)"/> Insensitive </label></li>
-                            <li><label><input type="checkbox" class="checkbox_flags" name="d" data-checked="unchecked" onclick="checkboxFlags(this)"/> Dotall </label></li>
-                            <li><label><input type="checkbox" class="checkbox_flags" name="e" data-checked="unchecked" onclick="checkboxFlags(this)"/> Enables </label></li>
-                            <li><label><input type="checkbox" class="checkbox_flags" name="s" data-checked="unchecked" onclick="checkboxFlags(this)"/> Sticky </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags" name="g" data-checked="checked" checked onclick="checkboxFlags(this)" /> Global </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags" name="i" data-checked="checked" checked onclick="checkboxFlags(this)" /> Insensitive </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags" name="m" data-checked="unchecked" onclick="checkboxFlags(this)" /> Multline </label></li>
+
+                            <li><label><input type="checkbox" class="checkbox_flags" name="y" data-checked="unchecked" onclick="checkboxFlags(this)" /> Stick </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags" name="u" data-checked="unchecked" onclick="checkboxFlags(this)" /> Unicode </label></li>
+                            <li><label><input type="checkbox" class="checkbox_flags" name="s" data-checked="unchecked" onclick="checkboxFlags(this)" /> Single Line </label></li>
 
                         </ul>
 
